<resources>
    <string name="app_name">Chuong trinh doi tien</string>
    <string name="author">Ho ten</string>
    <string name="computer">So may</string>
    <string name="textbox_hint">Nhap so tien</string>
    <string name="number_hint">Nhap khoang cach</string>
    <string name="usd_name">American Dollar</string>
    <string name="eur_name">European Cash</string>
    <string name="gbp_name">Greate Britain</string>
    <string name="aud_name">Australia Dollar</string>
    <string name="cad_name">Canadian Dollar</string>
    <string name="zar_name">South Africa Rand</string>
    <string name="nzd_name">New Zealand Dollar</string>
    <string name="vnd_name">Viet Nam Dong</string>
    <string name="inr_name">Indian Rupe</string>
    <string name="jpy_name">Yen Nhat</string>
    <string name="usd_unit">USD</string>
    <string name="eur_unit">EUR</string>
    <string name="gbp_unit">GBP</string>
    <string name="aud_unit">AUD</string>
    <string name="cad_unit">CAD</string>
    <string name="zar_unit">ZAR</string>
    <string name="nzd_unit">NZD</string>
    <string name="inr_unit">INR</string>
    <string name="jpy_unit">JPY</string>
    <string name="vnd_unit">VND</string>
</resources>