<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNumber"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textbox_hint"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spnUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/iv_usd"
                    android:layout_width="20dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/usd_name"
                    android:src="@drawable/usd" />

                <TextView
                    android:id="@+id/txt_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/usd_unit" />

                <TextView
                    android:id="@+id/lblUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/eur_name"
                    android:src="@drawable/eur" />

                <TextView
                    android:id="@+id/txt_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/eur_unit" />

                <TextView
                    android:id="@+id/lblEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_gbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gbp_name"
                    android:src="@drawable/gbp" />

                <TextView
                    android:id="@+id/txt_gbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/gbp_unit" />

                <TextView
                    android:id="@+id/lblGbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_inr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/inr_name"
                    android:src="@drawable/inr" />

                <TextView
                    android:id="@+id/txt_inr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/inr_unit" />

                <TextView
                    android:id="@+id/lblInr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_aud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/aud_name"
                    android:src="@drawable/aud" />

                <TextView
                    android:id="@+id/txt_aud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/aud_unit" />

                <TextView
                    android:id="@+id/lblAud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/iv_cad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cad_name"
                    android:src="@drawable/cad" />

                <TextView
                    android:id="@+id/txt_cad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/cad_unit" />

                <TextView
                    android:id="@+id/lblCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_zar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/zar"
                    android:contentDescription="@string/zar_name"/>

                <TextView
                    android:id="@+id/txt_zar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zar_unit"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:id="@+id/lblZar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_nzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nzd"
                    android:contentDescription="@string/nzd_name"/>

                <TextView
                    android:id="@+id/txt_nzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nzd_unit"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:id="@+id/lblNzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_jpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jav"
                    android:contentDescription="@string/jpy_name"/>

                <TextView
                    android:id="@+id/txt_jpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy_unit"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:id="@+id/lblJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_vnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vnd"
                    android:contentDescription="@string/vnd_name"/>

                <TextView
                    android:id="@+id/txt_vnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd_unit"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:id="@+id/lblVnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

        </TableLayout>
        </ScrollView>
    </LinearLayout>